# material_modern-cpp

./: .gitignore  .gitpod.yml  README.md
.devcontainer/: devcontainer.json
exercises/day01/assignment/: TestAssigment.md
exercises/day01/cmake/: README.md
exercises/day01/cmake/01-basic/: CMakeLists.txt
exercises/day01/cmake/01-basic/src/: main.cpp
exercises/day01/cmake/02-multifiles/: CMakeLists.txt
exercises/day01/cmake/02-multifiles/inc/: cpptest.h
exercises/day01/cmake/02-multifiles/src/: cpptest.cpp  main.cpp
exercises/day01/cmake/03-library/: CMakeLists.txt
exercises/day01/cmake/03-library/app/: CMakeLists.txt  main.cpp
exercises/day01/cmake/03-library/inc/test/: test.h
exercises/day01/cmake/03-library/src/: CMakeLists.txt  test.cpp
exercises/day01/cmake/shared/: CMakeOptions.cmake
exercises/day01/environment/: environment.md
exercises/day01/github/: basics.md
exercises/day01/markdown/: README.md
exercises/day01/markdown/01-basic/: basic.md
exercises/day01/markdown/02-advanced/: advanced.md
exercises/day01/markdown/03-samplereport/: report.md
exercises/day02/cpp98/: CMakeLists.txt
exercises/day02/cpp98/include/: cpp98.h
exercises/day02/cpp98/src/: cpp98.cpp  main.cpp
exercises/day03/mcore01/: CMakeLists.txt
exercises/day03/mcore01/include/: mcore01.h
exercises/day03/mcore01/src/: main.cpp  mcore01.cpp
exercises/day03/test/: CMakeLists.txt
exercises/day03/test/docs/: report.md
exercises/day03/test/include/: printerServer.h
exercises/day03/test/src/: printerClient.cpp  printerServer.cpp  printerTest.cpp
exercises/day04/mcore02/: CMakeLists.txt
exercises/day04/mcore02/include/: mcore02.h
exercises/day04/mcore02/src/: main.cpp  mcore02.cpp
exercises/day04/modernpimpl/: README.md
exercises/day04/modernpimpl/include/: modernprinter.h
exercises/day04/modernpimpl/src/: main.cpp  moderprinter.cpp
exercises/day04/test/: CMakeLists.txt
exercises/day04/test/include/: printerClient.h  printerIF.h  printerTest.h
exercises/day04/test/src/: main.cpp
exercises/day05/: CMakeLists.txt  main.cpp
exercises/day06/: CMakeLists.txt  main.cpp
exercises/day07/: cond_variables.cpp  main.cpp
exercises/day08/: CMakeLists.txt  exerciseMoveSem.cpp
exercises/day09/morepimpl/: CMakeLists.txt  README.md
exercises/day09/morepimpl/include/: modernpimpl.h  widget98.h
exercises/day09/morepimpl/src/: main.cpp  modernpimpl.cpp  widget98.cpp
exercises/day09/moveSemantic/: instructionMoveSemanticsExercise.md
slides/day07/: future-promise.cpp
slides/day08/: cond_variables.cpp  future-promise.cpp
slides/day09/: README.md
slides/day10/: README.md
